sass/plugins/woocommerce/_products.scss
.woocommerce-ordering{
	margin-bottom: 1rem;
}

.page-numbers {
	padding: 0;
	margin: 0;
	text-align: center;

	li {
		display: inline-block;

		a {
			border: 2px solid $color__accent;
			border-radius: 50%;
			width: 2rem;
			display: block;
		}

		:not(a) {
			font-weight: 800;
			width: 2rem;
		}

	}
}

ul.products {
	margin: 0;
	padding: 0;

	li.product {
		list-style: none;
		position: relative;
		margin-bottom: 2em;
		text-align: center;
		border: 2px solid $color__accent;
		padding: 0.5rem;
		border-radius: 0.5rem;

		.woocommerce-loop-product__title {
			height: 2.25rem;
		}

		.button {
			display: block;
			background: $color__secondary;
			border: 2px solid $color__accent;
			padding: 0.5rem;
			text-decoration: none;
			display: block;
		}

		.woocommerce-loop-product__title {
			font-size: 1rem;
		}

		.woocommerce-Price-amount {
			position: absolute;
			top: 0.5rem;
			left: 0;
			background: #00000099;
			color: $color__secondary;
			width: 100%;
			padding: 0.25rem 0.5rem;
			font-weight: 600;
		}

	}
}

@media screen and (min-width: 48em) {

	ul.products {

		li.product {

			@include column-width(3);
			float: left;
			margin-right: $columns__margin;

			&.first {
				clear: both;
			}

			&.last {
				margin-right: 0;
			}
		}
	}

	ul.products.columns-1 {

		li.product {
			float: none;
			width: 100%;
		}

	}

	@for $i from 2 through 6 {

		ul.products.columns-#{$i} {

			li.product {

				@include column-width( $i );
			}

		}
	}
}

